test/spec_vectors/simd_i32x4_cmp/fail/module_27.wat
(module (func $i32x4.gt_u-arg-empty (result v128) (i32x4.gt_u)))